name:               bdd
version:            0.1.0.0
synopsis: bdd tests language and tasty provider
-- description:
homepage:           https://github.com/paolino/bdd#readme
license:            BSD3
license-file:       LICENSE
author:             Paolo Veronelli
maintainer:         paolo.veronelli@gmail.com
copyright:          2017 Paolo Veronelli
category:           Test
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
    hs-source-dirs:   src
    exposed-modules:  Test.BDD.Language
    build-depends:    
          base >= 4.7 && <5
        , microlens
        , free
        , tasty
        , tasty-hunit
        , mtl
        , microlens-th
        , HUnit
        , tagged
    default-language: Haskell2010

executable bdd-exe
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base, bdd, tasty 
        , tasty-hunit
    default-language: Haskell2010

test-suite bdd-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   ./.
    main-is:          Test.hs
    build-depends:    base >= 4.7 && < 5, tasty
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

source-repository head
    type:             git
    location:         https://github.com/paolino/bdd
