name:               tasty-bdd
version:            0.1.0.0
synopsis: bdd tests language and tasty provider
-- description:
homepage:           https://github.com/paolino/bdd#readme
license:            BSD3
license-file:       LICENSE
author:             Paolo Veronelli
maintainer:         paolo.veronelli@gmail.com
copyright:          2017 Paolo Veronelli
category:           Test
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
    hs-source-dirs:   src
    exposed-modules:  Test.Tasty.Bdd
                    , Test.BDD.Language
    ghc-options:      -Wall
    build-depends:    base >= 4.7 && <5
                    , exceptions
                    , free
                    , HUnit
                    , microlens
                    , microlens-th
                    , mtl
                    , pretty-show
                    , pretty
                    , tagged
                    , tasty
                    , tasty-fail-fast
                    , tasty-hunit
                    , transformers
                    , tree-diff
    default-language: Haskell2010

executable example
    hs-source-dirs:   example
    main-is:          Main.hs
    ghc-options:      -Wall
    build-depends:    base
                    , tasty
                    , tasty-bdd
                    , tasty-fail-fast
                    , tasty-hunit
                    , aeson
                    , aeson-qq
    default-extensions: OverloadedStrings
    default-language: Haskell2010

source-repository head
    type:             git
    location:         https://github.com/paolino/bdd
