name:               tasty-bdd
version:            0.1.0.0
synopsis: bdd tests language and tasty provider
-- description:
homepage:           https://github.com/paolino/bdd#readme
license:            BSD3
license-file:       LICENSE
author:             Paolo Veronelli
maintainer:         paolo.veronelli@gmail.com
copyright:          2017 Paolo Veronelli
category:           Test
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
    hs-source-dirs:   src
    exposed-modules:  Test.Tasty.Bdd
                    , Test.BDD.Language
    ghc-options:      -Wall
    build-depends:    base >= 4.7 && <5
                    , exceptions
                    , free
                    , HUnit
                    , microlens
                    , microlens-th
                    , mtl
                    , pretty-show
                    , pretty
                    , tagged
                    , tasty
                    , tasty-fail-fast
                    , tasty-hunit
                    , transformers
                    , tree-diff
    default-language: Haskell2010

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    default-extensions: OverloadedStrings
    build-depends:    base >= 4.7 && <5
                    , exceptions
                    , aeson
                    , aeson-qq
                    , HUnit
                    , mtl
                    , tasty
                    , tasty-hunit
                    , tasty-bdd
                    , tasty-fail-fast
                    , transformers
                    , temporary
                    , qm-interpolated-string
                    , text
                    , regex-posix
    hs-source-dirs:   tests
    ghc-options:      -Wall
    default-extensions: OverloadedStrings
    default-language: Haskell2010

source-repository head
    type:             git
    location:         https://github.com/paolino/tasty-bdd
